--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,16 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     tools:context=".ui.home.HomeFragment">
 
     <com.amap.api.maps.MapView
 
         android:id="@+id/home_map"
         android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        android:layout_height="match_parent" />
+    </com.amap.api.maps.MapView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <AutoCompleteTextView
+        android:id="@+id/atv_start"
+        style="@style/Base.Widget.MaterialComponents.AutoCompleteTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/atv_end"
+        android:layout_toLeftOf="@+id/bt_route"
+        android:background="@drawable/textview_border"
+        android:gravity="left"
+        android:hint="请输入出发地"
+        android:popupBackground="@drawable/textview_border"
+        android:textSize="14sp" />
+
+    <AutoCompleteTextView
+        android:id="@+id/atv_end"
+        style="@style/Base.Widget.MaterialComponents.AutoCompleteTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_toLeftOf="@+id/bt_route"
+        android:background="@drawable/textview_border"
+        android:gravity="left"
+        android:hint="请输入目的地"
+        android:textSize="14sp" />
+
+    <Button
+        android:id="@+id/bt_route"
+        style="@style/Widget.AppCompat.Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/atv_start"
+        android:layout_alignBottom="@+id/atv_end"
+        android:layout_alignParentRight="true"
+        android:background="@drawable/textview_border"
+        android:text="开始查询"
+        android:textSize="16sp"/>
+
+</RelativeLayout>
