--- a/app/src/main/res/layout/fragment_slideshow.xml
+++ b/app/src/main/res/layout/fragment_slideshow.xml
@@ -4,4 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.slideshow.SlideshowFragment"/>
+    tools:context=".ui.slideshow.SlideshowFragment">
+
+    <WebView
+
+        android:id="@+id/web_view"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
