--- a/app/src/main/res/layout/activity_regist.xml
+++ b/app/src/main/res/layout/activity_regist.xml
@@ -33,7 +33,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
 
         android:layout_marginEnd="24dp"
         android:hint="请输入密码（8-16位数字和字母）"
@@ -86,9 +86,9 @@
         android:layout_marginLeft="40dp"
         android:layout_marginTop="100dp"
         android:gravity="center"
+        android:hint="请输入验证码"
         android:selectAllOnFocus="true"
         android:singleLine="true"
-        android:text="请输入验证码"
         android:textSize="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
