--- a/app/src/main/res/layout/activity_line1.xml
+++ b/app/src/main/res/layout/activity_line1.xml
@@ -4,21 +4,4 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.Line1Activity">
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="69dp"
-        tools:layout_editor_absoluteY="152dp" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/amap_bus"
-        tools:layout_editor_absoluteX="88dp"
-        tools:layout_editor_absoluteY="244dp" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+    tools:context=".ui.Line1Activity"/>
