--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/nav_home"
         android:name="com.example.subwayinfo.ui.home.HomeFragment"
-        android:label="@string/menu_home"
+        android:label="出行规划"
         tools:layout="@layout/fragment_home"/>
 
     <fragment
@@ -20,6 +20,6 @@
     <fragment
         android:id="@+id/nav_slideshow"
         android:name="com.example.subwayinfo.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
+        android:label="西安地铁线路图"
         tools:layout="@layout/fragment_slideshow" />
 </navigation>
