--- a/app/src/main/res/layout/activity_line1_hwz.xml
+++ b/app/src/main/res/layout/activity_line1_hwz.xml
@@ -4,6 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.station.line1.Line1_fdzmy_Activity">
+    tools:context=".ui.station.line1.Line1_hwz_Activity">
+
+    <ImageView
+        android:id="@+id/iv_line1_hwz"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/line1_hwz"
+        android:scaleType="centerCrop"
+        tools:layout_editor_absoluteX="-16dp"
+        tools:layout_editor_absoluteY="29dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
