--- a/app/src/main/res/layout/activity_line1_sq.xml
+++ b/app/src/main/res/layout/activity_line1_sq.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.Line4Activity">
+    tools:context=".ui.station.line1.Line1_sq_Activity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
